; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_array.c_Array_concat.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_array.c_Array_concat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@S_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_5__*, i32, i32, i32*, i32*)* @Array_concat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Array_concat(i32* %0, %struct.TYPE_5__* %1, i32 %2, i32 %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_5__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  store i32 0, i32* %15, align 4
  %18 = call i32 @TRACE(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %19 = load i32*, i32** %8, align 8
  %20 = call i32 @create_array(i32* %19, i32 0, i32** %14)
  store i32 %20, i32* %16, align 4
  %21 = load i32, i32* %16, align 4
  %22 = call i64 @FAILED(i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %6
  %25 = load i32, i32* %16, align 4
  store i32 %25, i32* %7, align 4
  br label %96

26:                                               ; preds = %6
  %27 = load i32*, i32** %14, align 8
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @concat_obj(i32* %27, i32 %31, i32* %15)
  store i32 %32, i32* %16, align 4
  %33 = load i32, i32* %16, align 4
  %34 = call i64 @SUCCEEDED(i32 %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %78

36:                                               ; preds = %26
  store i32 0, i32* %17, align 4
  br label %37

37:                                               ; preds = %74, %36
  %38 = load i32, i32* %17, align 4
  %39 = load i32, i32* %11, align 4
  %40 = icmp ult i32 %38, %39
  br i1 %40, label %41, label %77

41:                                               ; preds = %37
  %42 = load i32*, i32** %12, align 8
  %43 = load i32, i32* %17, align 4
  %44 = zext i32 %43 to i64
  %45 = getelementptr inbounds i32, i32* %42, i64 %44
  %46 = load i32, i32* %45, align 4
  %47 = call i64 @is_object_instance(i32 %46)
  %48 = icmp ne i64 %47, 0
  br i1 %48, label %49, label %58

49:                                               ; preds = %41
  %50 = load i32*, i32** %14, align 8
  %51 = load i32*, i32** %12, align 8
  %52 = load i32, i32* %17, align 4
  %53 = zext i32 %52 to i64
  %54 = getelementptr inbounds i32, i32* %51, i64 %53
  %55 = load i32, i32* %54, align 4
  %56 = call i32 @get_object(i32 %55)
  %57 = call i32 @concat_obj(i32* %50, i32 %56, i32* %15)
  store i32 %57, i32* %16, align 4
  br label %68

58:                                               ; preds = %41
  %59 = load i32*, i32** %14, align 8
  %60 = load i32, i32* %15, align 4
  %61 = add i32 %60, 1
  store i32 %61, i32* %15, align 4
  %62 = load i32*, i32** %12, align 8
  %63 = load i32, i32* %17, align 4
  %64 = zext i32 %63 to i64
  %65 = getelementptr inbounds i32, i32* %62, i64 %64
  %66 = load i32, i32* %65, align 4
  %67 = call i32 @jsdisp_propput_idx(i32* %59, i32 %60, i32 %66)
  store i32 %67, i32* %16, align 4
  br label %68

68:                                               ; preds = %58, %49
  %69 = load i32, i32* %16, align 4
  %70 = call i64 @FAILED(i32 %69)
  %71 = icmp ne i64 %70, 0
  br i1 %71, label %72, label %73

72:                                               ; preds = %68
  br label %77

73:                                               ; preds = %68
  br label %74

74:                                               ; preds = %73
  %75 = load i32, i32* %17, align 4
  %76 = add i32 %75, 1
  store i32 %76, i32* %17, align 4
  br label %37

77:                                               ; preds = %72, %37
  br label %78

78:                                               ; preds = %77, %26
  %79 = load i32, i32* %16, align 4
  %80 = call i64 @FAILED(i32 %79)
  %81 = icmp ne i64 %80, 0
  br i1 %81, label %82, label %84

82:                                               ; preds = %78
  %83 = load i32, i32* %16, align 4
  store i32 %83, i32* %7, align 4
  br label %96

84:                                               ; preds = %78
  %85 = load i32*, i32** %13, align 8
  %86 = icmp ne i32* %85, null
  br i1 %86, label %87, label %91

87:                                               ; preds = %84
  %88 = load i32*, i32** %14, align 8
  %89 = call i32 @jsval_obj(i32* %88)
  %90 = load i32*, i32** %13, align 8
  store i32 %89, i32* %90, align 4
  br label %94

91:                                               ; preds = %84
  %92 = load i32*, i32** %14, align 8
  %93 = call i32 @jsdisp_release(i32* %92)
  br label %94

94:                                               ; preds = %91, %87
  %95 = load i32, i32* @S_OK, align 4
  store i32 %95, i32* %7, align 4
  br label %96

96:                                               ; preds = %94, %82, %24
  %97 = load i32, i32* %7, align 4
  ret i32 %97
}

declare dso_local i32 @TRACE(i8*) #1

declare dso_local i32 @create_array(i32*, i32, i32**) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @concat_obj(i32*, i32, i32*) #1

declare dso_local i64 @SUCCEEDED(i32) #1

declare dso_local i64 @is_object_instance(i32) #1

declare dso_local i32 @get_object(i32) #1

declare dso_local i32 @jsdisp_propput_idx(i32*, i32, i32) #1

declare dso_local i32 @jsval_obj(i32*) #1

declare dso_local i32 @jsdisp_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
